<resources>
    <string name="app_name">Restaurant</string>
    <string name="toolbar_subtitle">Toolbar subtitle</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please wait...</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_empty_list">List is empty :(</string>


    <!-- GENERIC MESSAGES -->
    <string name="g_loading_msg">Loading. Please wait...</string>


    <!-- NETWORK DIALOG -->
    <string name="dialog_ok">Ok</string>
    <string name="no_network">No network connection</string>
    <string name="no_network_message">You are offline please check your internet connection</string>
    <string name="error_on_server">Server error occurred!</string>

    <string name="error_login">Login failed. Please try again.</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_register">Click to register</string>
    <string name="click_for_login">Back to login</string>
    <string name="error_registration">Registration failed.</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">REGISTER</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="error_logout">Logout FAILED on server.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="error_create_admin">Error! Admin not created.</string>
    <string name="action_add_admin">ADD ADMIN</string>
    <string name="action_update_admin">UPDATE ADMIN</string>
    <string name="label_restaurant_name">Restaurant:</string>
    <string name="restaurant_name">Jedite kod Dzoa</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="duration">Duration:</string>
    <string name="action_next">NEXT</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="time_format">hh:MM</string>
    <string name="hint_duration">Type in hours</string>

</resources>
